quantile OT demo

--- a/demo_quantile.ipynb
+++ b/demo_quantile.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "2a5057d0",
+   "id": "d61707f6",
    "metadata": {},
    "source": [
     "## 从单变量情形开始，探究LP方法的效果，及Optimal Transport方法的实现"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "578ed0dc",
+   "id": "5a761751",
    "metadata": {},
    "source": [
     "模型设计：\n",
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d52c145a",
+   "id": "261f699c",
    "metadata": {},
    "source": [
     "## 对每一个分位数t，都进行一次计算，观察效果。也就是，不考虑单调性约束。"
@@ -35,7 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "10354c3c",
+   "id": "3110708a",
    "metadata": {},
    "outputs": [
     {
@@ -80,7 +80,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "6befb05c",
+   "id": "22f3cdde",
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f98d0bb6",
+   "id": "d45b9e05",
    "metadata": {},
    "source": [
     "## 看起来还是蛮准确的，但是这里我们更加关心对偶程序的解，a，及统计量rank score, 所以这就需要重新设计模型了"
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ba16d384",
+   "id": "cf2ad43e",
    "metadata": {},
    "source": [
     "模型设计：\n",
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9f9a695d",
+   "id": "24ccc68a",
    "metadata": {},
    "source": [
     "考虑进行1000次实验\n",
@@ -169,7 +169,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "b765c68d",
+   "id": "bc919104",
    "metadata": {},
    "outputs": [
     {
@@ -367,7 +367,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "ac0bc357",
+   "id": "6fb6f85e",
    "metadata": {},
    "outputs": [
     {
@@ -399,7 +399,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d93a1bfc",
+   "id": "4357d4f6",
    "metadata": {},
    "source": [
     "## 看起来rank score的渐进长得也蛮像chi_2^2的，下面考虑加入单调性约束。也就是说，通过optimal transport的方法来求出密度pi，积分得到单调性约束下每个t对应的a，再计算rank score，然后再看看这个score是不是也有好的渐进性质呢？我们沿用上面的模型"
@@ -408,7 +408,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "7793daee",
+   "id": "83182d5d",
    "metadata": {},
    "outputs": [
     {
@@ -529,7 +529,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "581e07aa",
+   "id": "94151bae",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -537,7 +537,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -551,7 +551,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
