--- a/neat_code/demo.ipynb
+++ b/neat_code/demo.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "b344f9ae",
    "metadata": {},
    "outputs": [
@@ -31,7 +31,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.3766057294084533e-08\n"
+      "10\n"
      ]
     }
    ],
@@ -39,13 +39,32 @@
     "import numpy as np\n",
     "\n",
     "p_vals = np.load(\"p_collection_withB2.npy\")\n",
-    "print(max(p_vals))"
+    "print(len(p_vals[p_vals < 0.05]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "13076566",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "26\n"
+     ]
+    }
+   ],
+   "source": [
+    "p_vals = np.load(\"p_collection_withB2_reg2.npy\")\n",
+    "print(len(p_vals[p_vals < 0.05]))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "13076566",
+   "id": "f17e4416",
    "metadata": {},
    "outputs": [],
    "source": []
